migrate to java.util.Base64